[package]
name = "towering-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
apollo-router = "1.53.0"
axum = "0.7.5"
axum-macros = "0.4.1"
futures.workspace = true
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
serde_json = { version = "1.0.128", features = [
    "preserve_order",
    "float_roundtrip",
] }
tower-http = { version = "0.5.2", features = ["full"] }
tokio.workspace = true
tower.workspace = true
towering.workspace = true

[dev-dependencies]
tower-test.workspace = true
