[package]
name = "towering-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
apollo-compiler.workspace = true
apollo-federation.workspace = true
axum = "0.7.5"
clap = { workspace = true, features = ["derive"] }
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["full"] }
# reqwest = "0.12.7"
rustls = { version = "0.23.13", default-features = false }
# rustls = { version = "0.23.13", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.0"
serde_json = { version = "1.0.128", features = [
    "preserve_order",
    "float_roundtrip",
] }
thiserror = "1.0.63"
tower-http = { version = "0.5.2", features = ["full"] }
tokio.workspace = true
tower.workspace = true
towering-http.workspace = true
url = "2.5.2"

[dev-dependencies]
tower-test.workspace = true
