[package]
name = "towering-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
futures.workspace = true
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
serde_json = { version = "1.0.128", features = [
    "preserve_order",
    "float_roundtrip",
] }
tokio.workspace = true
tower.workspace = true

[dev-dependencies]
tower-test.workspace = true
